# Cargo.toml
[package]
name = "irfarp_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.3"
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1"
# Cryptographically Secure Random Number Generator
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }

# Authenticated Encryption (AES-256-GCM)
aes-gcm = { version = "0.10.1"}
# Key Derivation Function (HKDF-SHA256)
hkdf = "0.12.0"
sha2 = "0.10.8"

# Binary Serialization for custom protocol headers
bincode = "1.3.3"

# For base64 encoding/decoding of the master key
base64 = "0.21.7"

# For explicit endianness handling (useful for low-level protocol parsing)
byteorder = "1.5.0"

# For raw socket capabilities on Linux
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.153"

[profile.release]
# Optimize for binary size and performance, crucial for low-resource devices
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Explicitly define the binary target
[[bin]]
name = "irfarp_system" # The name of your executable binary
path = "main.rs" # Path to the main source file for this binary
